--- a/src/pages/DiagnosingVulnerabilities.css
+++ b/src/pages/DiagnosingVulnerabilities.css
@@ -29,6 +29,12 @@
   }
 }
 
+@media (max-width: 767px) {
+  .DiagnosingVulnerabilities .list-title {
+    text-align: center;
+  }
+}
+
 @media (min-width: 768px) {
   .DiagnosingVulnerabilities .list-title {
     font-size: 1.5625rem;
@@ -112,6 +118,3 @@
     margin: 1rem auto;
   }
 }
-
-
-
